--- a/src/templates/Cart/styles.css
+++ b/src/templates/Cart/styles.css
@@ -23,7 +23,6 @@
   font-weight: 600;
 
   background-color: #fff;
-  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.25);
   border: 1px solid #C2C2C2;
   border-radius: 5px;
 }
@@ -70,15 +69,16 @@
   font-weight: 400;
 }
 
-  .add-moreproducts{
-    width: 118px;
-    height: 38px;
+.add-moreproducts{
+  width: 118px;
+  height: 38px;
 
-    border: 1px solid #C2C2C2;
-    border-radius: 5px;
+  border: 1px solid #C2C2C2;
+  border-radius: 5px;
 
-    text-align: center;
-  }
+  text-align: center;
+}
+
 .remove-products{
   border: none;
   background: transparent;
@@ -98,4 +98,26 @@
 }
 .product-price{
   margin-left: 46px;
+}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none;
+}
+input[type=number]{
+  width: 35px;
+  height: 35px;
+  border: none;
+  text-align: center;
+}
+.add-remove{
+  width: 38px;
+  height: 38px;
+  border-radius: 50px;
+
+  background-color: transparent;
+  border: none;
+
+  text-align: center;
+  cursor:pointer;
 }
