--- a/src/templates/Cart/styles.css
+++ b/src/templates/Cart/styles.css
@@ -1,5 +1,5 @@
 .mycart{
-  margin: 56px 38px;
+  margin: 56px 38px 56px 0px;
 }
 .tittle-mycart{
   margin-left: 30px;
@@ -120,4 +120,75 @@ input[type=number]{
 
   text-align: center;
   cursor:pointer;
+}
+
+/* Carrinho vazio */
+.flex-badcart{
+  display : flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 14vh;
+}
+
+.flex-badcart strong{
+  font-size: 28px;
+  margin-bottom: 16px;
+}
+
+.flex-badcart span{
+  font-size: 18px;
+  margin-bottom: 42px;
+  color: #585B5E;
+}
+
+.img-badcart{
+  width: 168px;
+  height: 173px;
+  margin-bottom: 38px;
+}
+.a-badcart{
+  text-decoration: none;
+}
+.button-additemcart{
+  background-color: #3BA339;
+  color: #fff;
+
+  width: 320px;
+  height: 48px;
+  border-radius: 5px;
+
+  font-size: 24px;
+  font-weight: 600;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Resumo do total de itens */
+.flex-allcart{
+  display: flex;
+  justify-content: center;
+}
+.total-cart{
+  width: 400px;
+  height: 420px;
+  margin-top: 115px;
+
+  background-color: #fff;
+  border: 1px solid #C2C2C2;
+  border-radius: 5px;
+}
+.resumo-produto{
+  height: 60px;
+  padding: 0px 24px;
+
+  display: flex;
+  align-items: center;
+
+}
+.resumo-produto span{
+  color: #3BA339;
+  font-size: 16px;
+  font-weight: 600;
 }
