--- a/src/templates/Login/styles.css
+++ b/src/templates/Login/styles.css
@@ -24,7 +24,7 @@
 } 
 
 .login-form{
-  background-image: url("../Images/ilustracao.png");
+  background-image: url("../../assets/ilustracao.png");
   background-position: center;
 
   border: 0.5px solid hsla(0, 0%, 0%, 0.25);
