--- a/src/templates/Login/styles.css
+++ b/src/templates/Login/styles.css
@@ -49,7 +49,7 @@
   flex-direction: column;
 }
 
-input[type='email']{
+input[id='login-email']{
   width: 322px;
   height: 48px;
   padding: 0px 12px;
@@ -60,7 +60,7 @@ input[type='email']{
 
   font-size: 14px;
 }
-input[type='password']{
+input[id='login-senha']{
   width: 322px;
   height: 48px;
   padding: 0px 12px;
