--- a/src/templates/Cadastro/styles.css
+++ b/src/templates/Cadastro/styles.css
@@ -49,7 +49,7 @@
   flex-direction: column;
 }
 
-input[type='email']{
+input[id='email' ]{
   width: 322px;
   height: 48px;
   padding: 0px 12px;
@@ -60,7 +60,7 @@ input[type='email']{
 
   font-size: 14px;
 }
-input[type='tel']{
+input[id="telefone"] {
   width: 322px;
   height: 48px;
   padding: 0px 12px;
@@ -71,7 +71,7 @@ input[type='tel']{
 
   font-size: 14px;
 }
-input[type='text']{
+input[id='name' ]{
   width: 322px;
   height: 48px;
   padding: 0px 12px;
