--- a/src/templates/Fornecedor/styles.css
+++ b/src/templates/Fornecedor/styles.css
@@ -71,17 +71,76 @@ input[id='quantidade']{
   font-size: 14px;
 }
 input[id='imagem']{
-  width: 180px;
-  height: 48px;
-  padding: 0px 12px;
-  margin-bottom: 12px;
-
-  border: 0.5px solid hsla(0, 0%, 0%, 0.25);
-  border-radius: 5px;
-
-  font-size: 14px;
+  display: none;
 }
 .qtdimg{
   display: flex;
   justify-content: space-between
+}
+.submit-img-produto{
+  width: 205px;
+  height: 48px;
+  padding: 0px 12px;
+  margin-bottom: 12px;
+
+  background-color: #fff;
+  border: 0.5px solid hsla(0, 0%, 0%, 0.25);
+  border-radius: 5px;
+
+  font-size: 12px;
+  color: #C2C2C2;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  cursor: pointer;
+}
+.svg-camera{
+  height: 16px;
+  width: 16px;
+  margin-right: 5px;
+}
+.submit-produto{
+  background-color: #3BA339;
+  color: #fff;
+
+  width: 348px;
+  height: 48px;
+
+  margin-bottom: 15px;
+  margin-top: 10px;
+
+  border-radius: 5px;
+  border: none;
+
+  font-size: 24px;
+  font-weight: 500;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  cursor: pointer;
+}
+.add-produto{
+  background-color: #3BA339;
+  color: #fff;
+
+  width:100%;
+  height: 48px;
+
+  margin: 25px 0px;
+
+  border-radius: 5px;
+  border: none;
+
+  font-size: 24px;
+  font-weight: 500;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  cursor: pointer;
 }
