Adicionato telas de: seja fornecedor, pagamento. E correção em algumas telas

--- a/src/components/NavBar/styles.css
+++ b/src/components/NavBar/styles.css
@@ -80,3 +80,7 @@ textarea:focus, input:focus {
   align-items: center;
   justify-content: center;
 }
+
+.open-usermenu:hover .position-menu{
+  display: block;
+}
