--- a/src/templates/Cadastro/styles.css
+++ b/src/templates/Cadastro/styles.css
@@ -87,6 +87,7 @@ input[id='cadastro-senha']{
   height: 48px;
   padding: 0px 12px;
   margin-bottom: 20px;
+  
   margin-right: 17px;
 
   border: 0.5px solid hsla(0, 0%, 0%, 0.25);
@@ -98,6 +99,7 @@ input[id='cadastro-csenha']{
   width: 140px;
   height: 48px;
   padding: 0px 12px;
+  margin-bottom: 20px;
 
   border: 0.5px solid hsla(0, 0%, 0%, 0.25);
   border-radius: 5px;
@@ -107,6 +109,8 @@ input[id='cadastro-csenha']{
 
 .cadastro-criarsenha{
   display: flex;
+  align-items: center;
+  
 }
 
 .cadastro-buttoncadastro{
@@ -136,4 +140,58 @@ input[id='cadastro-csenha']{
 
   font-size: 24px;
   font-weight: 500;
+}
+.btn-senha{
+  height: 18px;
+  width: 18px;
+
+  margin-bottom: 20px;
+  margin-right: 8px;
+
+  border: 1px solid #3BB139;
+  border-radius: 50%;
+
+  text-align: center;
+  font-weight: 600;
+
+  background-color: #3BB139;
+  color: #fff;
+
+  cursor: pointer;
+}
+
+.descricao-senha{
+  display: none;
+
+  width: 150px;
+  padding:5px;
+
+  margin-bottom: 20px;
+  margin-right: 8px;
+
+  text-align: center;
+  font-weight: 400;
+  font-size: 10px;
+
+  background-color: #fff;
+  border: 0.5px solid hsla(0, 0%, 0%, 0.25);
+  border-radius: 5px;
+
+}
+
+.info-senha{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+
+  width: 198px;
+  height: 58px;
+
+  position: relative;
+  bottom: 182px;
+  right: 275px;
+}
+
+.info-senha:hover .descricao-senha{
+  display: block;
 }
