--- a/src/templates/Login/styles.css
+++ b/src/templates/Login/styles.css
@@ -111,7 +111,6 @@ input[id='login-senha']{
 }
 
 .login-styletext{
-  color: #585B5E;
   font-size: 12px;
 }
 
@@ -133,4 +132,15 @@ input[id='login-senha']{
 
   width: 120px;
   height: 0.5px;
+}
+.button-dectext{
+  text-decoration: none;
+  font-size: 24px;
+  font-weight: 500;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  margin-bottom: 24px
 }
