--- a/src/templates/Home/styles.css
+++ b/src/templates/Home/styles.css
@@ -106,8 +106,14 @@ footer{
   border-radius: 5px;
   margin-top: 20px;
   font-weight: 500;
+  font-size: 14px;
+  text-decoration: none;
 
   cursor: pointer;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   height: 30px;
   width: 195px;
