--- a/src/components/Modal/styles.css
+++ b/src/components/Modal/styles.css
@@ -64,3 +64,40 @@ input[id='pin']{
   font-weight: 500;
   font-size: 20px;
 }
+
+.modal-loading{
+  width: 100%;
+  height: 100% ;
+
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #00000011;
+
+  cursor: not-allowed;
+}
+.loader{
+  border: 5px solid #fff;
+  border-radius: 50%;
+  border-top: 5px solid transparent;
+  width: 50px;
+  height: 50px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
