--- a/src/components/PostCard/styles.css
+++ b/src/components/PostCard/styles.css
@@ -14,8 +14,8 @@
 
   background: transparent;
   
-  width: 124px;
   height: 124px;
+  width: auto;
   margin-top: 14px;
   margin-bottom: 12px;
 }
