--- a/src/components/MenuUser/styles.css
+++ b/src/components/MenuUser/styles.css
@@ -47,12 +47,11 @@
   color: #000;
 }
 
-.button-gprodutos img{
-  width: 12px;
-  height: 12px;
-  margin: 4px 4px 4px 8px;
-
-  border: none;
+.img-meuuser{
+  width: 12px !important;
+  height: 12px !important;
+  margin: 4px 4px 4px 8px !important;
+  border: none !important;
 }
 
 .links-gprodutos img{
