--- a/src/components/Modal/styles.css
+++ b/src/components/Modal/styles.css
@@ -101,3 +101,55 @@ input[id='pin']{
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+.modal-pago{
+  width: 100%;
+  height: 100% ;
+
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #fff;
+}
+
+.modal-pago strong{
+  font-size: 28px;
+  margin: 8px;
+}
+
+.modal-pago p{
+  font-size: 18px;
+  margin: 8px;
+  color: #585B5E
+}
+
+.modal-pago img{
+  height: 175px;
+  margin: 20px;
+}
+
+.modal-pago a{
+  height: 48px;
+  width: 300px;
+  margin: 8px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-color: #3BB139;
+  color: #fff;
+
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 500;
+
+  border: none;
+  border-radius: 5px;
+}
